--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@babel/preset-env": "7.14.5",
     "@types/jest": "26.0.23",
     "eslint": "7.29.0",
-    "jest": "26.6.3",
-    "nodemon": "2.0.7"
+    "jest": "^27.5.1",
+    "nodemon": "^1.11.1"
   }
 }
